Added recap page for rents and error for signup

--- a/src/style/common.css
+++ b/src/style/common.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+.content{
+  margin-top: 1em;
+  font-family: poppins;
+}
+
 .shadow-link {
   color: black;
   text-decoration: none;
