--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -3,14 +3,17 @@
     text-align: left;
 }
 footer {
-  position: absolute;
-  bottom: 0;
+  position: relative;
+  line-height: 40px;
+  margin-top: 2em;
   width: 100%;
   height: 2.5rem;            /* Footer height */
 }
 
 a{
     color: black;
+    text-decoration: none;
+    font-size: 1.2em;
 }
 ul{
     list-style: none;
