--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -3,7 +3,8 @@
     text-align: left;
 }
 footer {
-  position: relative;
+  position: absolute;
+  bottom: 0;
   line-height: 40px;
   margin-top: 2em;
   width: 100%;
