--- a/src/style/common.css
+++ b/src/style/common.css
@@ -8,7 +8,7 @@
 }
 
 .sub-title {
-    margin: 1em 1em;
+    margin: 1em 0em;
     text-align: left;
     font-size: 1em;
     font-family: poppins;
@@ -30,4 +30,11 @@
 .App {
   position: relative;
   min-height: 100vh;
+}
+
+@media only screen and (min-width: 768px) {
+ 
+  .containerSM {
+    max-width: 550px;
+  }
 }
