--- a/src/style/home.css
+++ b/src/style/home.css
@@ -2,10 +2,14 @@
     background-image:
             url('https://images.unsplash.com/photo-1509315811345-672d83ef2fbc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80');
     height: 94vh;
-    width: 100vw;
+    width: 100%;
     background-size: 100% 100%;
     background-size:     cover;
     background-repeat:   no-repeat;
+}
+
+.button-div {
+    height: 250px;
 }
 
 .text-box-home {
