--- a/src/style/common.css
+++ b/src/style/common.css
@@ -29,12 +29,16 @@
 
 .App {
   position: relative;
-  min-height: 100vh;
+  min-height: calc(100vh - 211px - 58px);
+}
+
+body {
+  min-height: calc(100vh - 211px - 58px);
 }
 
 @media only screen and (min-width: 768px) {
  
   .containerSM {
-    max-width: 550px;
+    max-width: 700px;
   }
 }
